parameters can be sent into a function, through string substitution

--- a/examples.cfg
+++ b/examples.cfg
@@ -52,4 +52,11 @@ exmp2 = '$LINKS_AND_STRINGS:x$ love $LINKS_AND_STRINGS:y$'
 #You can resolve variable into string
 exmp4 = 'In my $LINKS_AND_STRINGS:y$ + conf, $LINKS_AND_STRINGS:x$ can resolve x+y = $COMPUTATIONS:x+y$ inline'
 
+[PARAMTERS_IN_FUNCTIONS]
+#param is parameter
+parameter = 4
+#to use it, include STRING into a function body
+#LINK wouldn't work!
+function = lambda x: x+$PARAMTERS_IN_FUNCTIONS:parameter$
+
 #END  examples.cfg
